--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "start": "node server.ts",
+    "start": "node server.js",
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
